[tool.poetry]
name = "Exporter"
version = "0.1.0"
description = "Simple flask app for converting and exporting specific information."
authors = ["te25son <te25son@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
mypy = "^0.961"
black = "^22.3.0"
Flask-WTF = "^1.0.1"
sqlmodel = "^0.0.6"
httpx = "^0.23.0"
pytest = "^7.1.2"
pytest-dotenv = "^0.5.2"
blinker = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
